--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:dir": "node .electron-vue/build.js && electron-builder --dir",
     "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
     "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
+    "postinstall": "electron-builder install-app-deps",
     "dev": "node .electron-vue/dev-runner.js",
     "e2e": "npm run pack && mocha test/e2e",
     "pack": "npm run pack:main && npm run pack:renderer",
@@ -59,14 +60,18 @@
     "brain": "^1.0.0",
     "brain.js": "^2.0.0-beta.1",
     "chart.js": "^2.9.3",
+    "chowdown": "^1.2.5",
     "cors": "^2.8.5",
     "express": "latest",
     "finale-rest": "^1.1.1",
+    "google-geocoder": "^0.2.1",
     "jquery": "^3.5.1",
     "jssoup": "0.0.11",
     "mdn-browser-compat-data": "^1.0.22",
     "mimir": "0.0.1",
+    "moment": "^2.27.0",
     "nedb-promises": "^4.0.3",
+    "node-geocoder": "^3.27.0",
     "papaparse": "^5.2.0",
     "sass": "^1.26.5",
     "sequelize": "^5.21.9",
