--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@ dist/web/*
 build/*
 !build/icons
 coverage
-node_modules/
+node_modules/*
 data/
+node_modules
 npm-debug.log
 npm-debug.log.*
 thumbs.db
