--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "vue-float-action-button": "^0.6.6",
     "vue-graph": "^0.8.7",
     "vue-router": "^3.0.1",
+    "vue-simple-alert": "^1.1.1",
     "vue-simple-progress": "^1.1.1",
     "vue2-dropzone": "^3.6.0",
     "vuex": "^3.0.1",
