Correção de bug. Havia um erro na declaração CopyWebpackPlugin e um conflito com o MinifyPlugin. Com isso, não era possível fazer o build da aplicação.

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "chart.js": "^2.9.3",
     "chowdown": "^1.2.5",
     "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
     "express": "latest",
     "finale-rest": "^1.1.1",
     "google-geocoder": "^0.2.1",
