--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "google-geocoder": "^0.2.1",
     "jquery": "^3.5.1",
     "jssoup": "0.0.11",
+    "leveldown": "^5.6.0",
+    "linvodb3": "^3.26.0",
     "mdn-browser-compat-data": "^1.0.22",
     "mimir": "0.0.1",
     "moment": "^2.27.0",
