--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "finale-rest": "^1.1.1",
     "jquery": "^3.5.1",
     "jssoup": "0.0.11",
+    "leveldown": "^5.6.0",
+    "levelup": "^4.4.0",
     "mdn-browser-compat-data": "^1.0.22",
     "mimir": "0.0.1",
     "moment": "^2.27.0",
