--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "express": "latest",
     "finale-rest": "^1.1.1",
     "jquery": "^3.5.1",
+    "json2csv": "^5.0.5",
     "jssoup": "0.0.11",
     "leveldown": "^5.6.0",
     "levelup": "^4.4.0",
@@ -72,6 +73,7 @@
     "moment": "^2.27.0",
     "nedb-promises": "^4.0.3",
     "papaparse": "^5.2.0",
+    "retry-axios": "^2.4.0",
     "sass": "^1.26.5",
     "sequelize": "^5.21.9",
     "sequelize-cli": "^5.5.1",
