--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "express": "latest",
     "finale-rest": "^1.1.1",
     "jquery": "^3.5.1",
+    "js-levenshtein": "^1.1.6",
     "json2csv": "^5.0.5",
     "jssoup": "0.0.11",
     "leveldown": "^5.6.0",
